<resources>
    <string name="app_name">ToDoList</string>
    <string name="add">add</string>
    <string name="remove">remove</string>
    <string name="confirm">confirm</string>
    <string name="addTheme">Treść Zadania</string>
    <string name="undone">Zadanie niezakończone</string>
    <string name="done">Zadanie zakończone</string>
</resources>

